--- a/templates/index.html
+++ b/templates/index.html
@@ -123,7 +123,7 @@ Al39Co17Ce22La22</pre>
         </div>
       </form>
       {% if result is not none %}
-      <div class="alert alert-success text-center mt-4">D<sub>max</sub> = <strong>{{ result | round(4) }} mm</strong></div>
+      <div class="alert alert-success text-center mt-4"><strong>D<sub>max</sub> = {{ result | round(4) }} mm</strong></div>
       {% elif error %}
       <div class="alert alert-danger text-center mt-4">{{ error }}</div>
       {% endif %}
